@@ -14,10 +14,10 @@ main: "olupis.NyfalisMain"
 #the mod description as seen in the mod dialog
 description: "(\u26A0Work in progress\u26A0)\n Yet another planet mod \nThat does it's best to give the player(s) a bit of something new,\n with a minor hint of what the base game has to offer, focus on RTS controls, and pain on top"
 
-subtitle: "Yet another planet mod, v1.8"
+subtitle: "Yet another planet mod, v1.8.0"
 
 #the mod version
-version: 1.8
+version: 1.8.0
 
 #the minimum game build required to run this mod
 minGameVersion: 136
